--- a/web/templates/landingpage.html
+++ b/web/templates/landingpage.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Landingpage
+Gallery
 {% endblock %}
 
 {% block head %}
@@ -10,11 +10,8 @@ Landingpage
 {% endblock %}
 
 {% block body %}
-    <div id="navbar">
-
-    </div>
-
-	<h1>Landingpage</h1>
+	<h1>Stable Diffusion WebUI</h1>
+    <h3>by Philipp Schott</h3>
 
     <div class="images">
         {% for image in images %}
