--- a/web/static/css/landingpage.css
+++ b/web/static/css/landingpage.css
@@ -1,14 +1,32 @@
+h1 {
+    user-select: none;
+    font-size: 4rem;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+h3 {
+    user-select: none;
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 50px;
+}
+
+
 .images {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 20px;
     width: calc(100% - 40px);
+    padding: 20px;
+    justify-content: center;
 }
 
 .card {
-    width: 512px;
-    height: 512px;
+    aspect-ratio: 1 / 1;
+    max-width: 512px;
     overflow: hidden;
 
     display: flex;
@@ -31,7 +49,7 @@
     width: 100%;
     height: 30px;
 
-    background: rgba(0,0,0,.8);
+    background: rgba(0, 0, 0, .8);
 
     text-align: center;
     line-height: 30px;
