--- a/web/static/css/landingpage.css
+++ b/web/static/css/landingpage.css
@@ -46,10 +46,14 @@ h3 {
     bottom: 0;
     left: 0;
 
-    width: 100%;
+    width: calc(100% - 40px);
     height: 30px;
+    padding: 0 20px;
 
     background: rgba(0, 0, 0, .8);
+
+    display: flex;
+    justify-content: space-between;
 
     text-align: center;
     line-height: 30px;
